fix: remove extra space between grouped departures

--- a/assets/css/solari/departure.scss
+++ b/assets/css/solari/departure.scss
@@ -13,7 +13,20 @@
   .departure {
     margin-left: 0px;
     margin-right: 0px;
+
+    &--with-via {
+      padding-top: 3.5px;
+      padding-bottom: 3.5px;
+    }
+
+    &--no-via {
+      padding-top: 14px;
+      padding-bottom: 14px;
+    }
   }
+
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 
 .departure {
@@ -21,8 +34,8 @@
   margin-right: 42px;
 
   &--with-via {
-    padding-top: 14px;
-    padding-bottom: 14px;
+    padding-top: 13.5px;
+    padding-bottom: 13.5px;
   }
 
   &--no-via {
